# festival

./: meson.build  meson_options.txt
config/: project.mak
doc/: build_docs.sh  meson.build
examples/: meson.build  prepend_shebang.py
lib/: Makefile  meson.build
lib/languages/: Makefile  meson.build
lib/multisyn/: meson.build
src/: meson.build
src/arch/: meson.build
src/arch/festival/: Makefile  ModuleDescription.cc  audspio.cc  festival.cc  meson.build  server.cc  viterbi.cc  wave.cc
src/include/: ModuleDescription.h  festival.h  meson.build
src/main/: meson.build
src/modules/: create_init_modules.sh  meson.build
src/modules/Duration/: meson.build
src/modules/Intonation/: gen_int.cc  meson.build  simple.cc
src/modules/Lexicon/: complex.cc  meson.build
src/modules/MultiSyn/: DiphoneBackoff.cc  DiphoneBackoff.h  DiphoneUnitVoice.cc  EST_JoinCostCache.cc  EST_JoinCostCache.h  TargetCostRescoring.cc  TargetCostRescoring.h  UnitSelection.cc  meson.build
src/modules/MultiSyn/inst_tmpl/: list_scorepair_t.cc  list_strlist_t.cc  meson.build
src/modules/Text/: meson.build  text_modes.cc  tok_ext.cc
src/modules/UniSyn/: UniSyn.cc  meson.build  us_mapping.cc  us_unit.cc
src/modules/UniSyn_diphone/: UniSyn_diphone.cc  meson.build  us_diphone_index.cc  us_diphone_unit.cc
src/modules/UniSyn_phonology/: meson.build
src/modules/base/: ff.cc  meson.build  phrasify.cc
src/modules/clunits/: clunits.cc  meson.build
src/modules/clustergen/: HTS_vocoder_me.cc  HTS_vocoder_me.h  meson.build
src/modules/diphone/: di_io.cc  meson.build
src/modules/donovan/: meson.build
src/modules/hts_engine/: HTS_audio.c  HTS_engine.c  HTS_engine.h  HTS_gstream.c  HTS_hidden.h  HTS_label.c  HTS_misc.c  HTS_model.c  HTS_pstream.c  HTS_sstream.c  HTS_vocoder.c  meson.build
src/modules/parser/: meson.build
src/modules/rxp/: meson.build
