
lib_languages = files(
  'language_american_english.scm',
  'language_british_english.scm',
  'language_castillian_spanish.scm',
  'language_english.scm',
  'language_scots_gaelic.scm',
  'language_welsh.scm'
)

install_data(
  [lib_languages],
  install_dir : get_option('datadir') / meson.project_name() / 'languages'
)

